--- a/20 Paskaita - 09.29/index.html
+++ b/20 Paskaita - 09.29/index.html
@@ -7,6 +7,73 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
+    <main>
+        <section>
+            <h1>Sveiki</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+            Qui incidunt, alias possimus repellendus impedit,
+            illum assumenda minus dolore vero exercitationem eligendi
+            in quae ullam commodi. Voluptatum nemo amet perspiciatis at?</p>
+            <button onclick="vardas()">Seek the magic</button>
+        </section>
+        <section id="vienas">
+            <h1>Sveiki</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+            Qui incidunt, alias possimus repellendus impedit,
+            illum assumenda minus dolore vero exercitationem eligendi
+            in quae ullam commodi. Voluptatum nemo amet perspiciatis at?</p>
+            <button>Seek the magic</button>
+        </section>
+        <section id="antras">
+            <h1>Sveiki</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+            Qui incidunt, alias possimus repellendus impedit,
+            illum assumenda minus dolore vero exercitationem eligendi
+            in quae ullam commodi. Voluptatum nemo amet perspiciatis at?</p>
+            <button>Seek the magic</button>
+            <p></p>
+        </section>
+        <section id="trys">
+            <h1>1</h1>
+            <button>Click Me</button>
+        </section>
+        <section id="keturi">
+            <h1>Ilgas paragrafas</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+                Qui incidunt, alias possimus repellendus impedit,
+                illum assumenda minus dolore vero exercitationem eligendi
+                in quae ullam commodi. Voluptatum nemo amet perspiciatis at?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                Qui incidunt, alias possimus repellendus impedit,
+                illum assumenda minus dolore vero exercitationem eligendi
+                in quae ullam commodi. Voluptatum nemo amet perspiciatis at?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                Qui incidunt, alias possimus repellendus impedit,
+                illum assumenda minus dolore vero exercitationem eligendi
+                in quae ullam commodi. Voluptatum nemo amet perspiciatis at?</p>
+        </section>
+        <section id="penki">
+            <h1></h1>
+            <button>Random number</button>
+            <p></p>
+        </section>
+        <section id="six">
+            <h1></h1>
+            <button class="bandymas">Turiu bent 18 metų</button>
+            <button class="bandymas2">Mažiau nei 18 metų</button>
+        </section>
+        <section id="seven">
+            <p>Do not click</p>
+        </section>
+        <section id="eight">
+            <h1 style="height: 100vh; width: 100vh;"> Nejudink pelytės</h1>
+        </section>
+        <section id="nine">
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="three">3</button>
+        </section>
+    </main>
     
 </body>
 </html>
