--- a/28 Paskaita - 10.11/index.html
+++ b/28 Paskaita - 10.11/index.html
@@ -10,7 +10,14 @@
 <body>
     <header></header>
     <main>
-        <section></section>
+        <section id="fifth">
+            <form>
+                <input type="text" id="xInput" placeholder="Enter x">
+                <input type="text" id="yInput" placeholder="Enter y">
+                <input type="submit" value="Submit">
+            </form>
+            <p id="result"></p>
+        </section>
     </main>
     <footer></footer>
 </body>
