--- a/28 Paskaita - 10.11/index.html
+++ b/28 Paskaita - 10.11/index.html
@@ -10,6 +10,26 @@
 <body>
     <header></header>
     <main>
+        <section>
+            <h1>Klasė (Class)</h1>
+            <p>
+              Klasės yra skirtos generuoti naujus objektus.
+            </p>
+            <p>
+              Klasė yra objektų kūrimo šablonas.<br>
+              Klasė privalo būti aprašyta prieš į ją kreipiantis.<br>
+              Kreipiantis į Klasę, būtina prirašyti žodelį "new" prieš tos Klasės pavadinimą.
+              Klasių pavadinimai rašomi iš didžiųjų raidžių.<br>
+              Klasių konstruktoriuose privalo būti "this".
+            </p>
+            <h2>OOP (Object Orientated Programing) principai</h2>
+            <ul>
+              <li>Encapsulation - Inkapsuliacija</li>
+              <li>Abstraction - Abstrakcija</li>
+              <li>Polymorphism - Polimorfizmas</li>
+              <li>Inheritance - Paveldėjimas</li>
+            </ul>
+          </section>
         <section id="fifth">
             <form>
                 <input type="text" id="xInput" placeholder="Enter x">
