--- a/36 Paskaita - 10.24 CRUD praktika/index.html
+++ b/36 Paskaita - 10.24 CRUD praktika/index.html
@@ -15,8 +15,8 @@
             <h3>Add more books</h3>
             <form>
                 <div>
-                    <label for="bookTitle">Book title</label><br>
-                    <input type="text" name="bookTitle" id="bookTitle" placeholder="The Lord of the Rings">
+                    <label for="title">Book title</label><br>
+                    <input type="text" name="title" id="title" placeholder="The Lord of the Rings">
                 </div>
                 <div>
                     <label for="author">Book author</label><br>
